Agregaando configuración de Docker para Render

--- a/render.yaml
+++ b/render.yaml
@@ -1,17 +1,13 @@
 services:
   - type: web
     name: tienda-virtual
-    env: php
-    plan: free
+    env: docker
     region: oregon
-    buildCommand: 
-      - curl -sS https://getcomposer.org/installer | php
-      - php composer.phar install
-    startCommand: php artisan serve --host 0.0.0.0 --port 10000
+    plan: free
+    rootDir: .
+    dockerfilePath: Dockerfile
     envVars:
       - key: APP_ENV
         value: production
-      - key: APP_KEY
-        sync: false
       - key: DB_CONNECTION
         value: mysql
